--- a/songs-content-page-shared-links-redirecting.html
+++ b/songs-content-page-shared-links-redirecting.html
@@ -52,9 +52,9 @@
       </div>
     `;
   } else {
-    // Converted destination URL
+    // Converted destination URL (UPDATED DOMAIN)
     const targetUrl =
-      "https://images-11.github.io/yan-1-website-songs-content-page/index.html?playlist_id=" +
+      "https://page-2.github.io/yan-1-website-songs-content-page/index.html?playlist_id=" +
       encodeURIComponent(playlistId);
 
     // Create full-screen iframe
